<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context="jjpartnership.hub.view_layer.activities.create_agent_account_activity.UserInfoNamePagerFragment">

    <!-- TODO: Update blank fragment layout -->

    <jjpartnership.hub.view_layer.custom_views.BackAwareEditText
        android:id="@+id/field_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light" />

    <jjpartnership.hub.view_layer.custom_views.BackAwareEditText
        android:id="@+id/field_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light" />

    <jjpartnership.hub.view_layer.custom_views.BackAwareEditText
        android:id="@+id/field_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColor="@android:color/background_light" />
</LinearLayout>
