<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:weightSum="4">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:rotation="90"
        android:tint="@color/hub_logo_color"
        app:srcCompat="@drawable/hub_icon" />

    <TextView
        android:id="@+id/user_company_tv"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="135dp"
        android:gravity="center_vertical|center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/grey_text" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="102dp"
        android:capitalize="characters"
        android:text="Account Details"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="215dp">

        <LinearLayout
            android:id="@+id/email_password_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <EditText
                android:id="@+id/field_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/first_name"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/background_light" />

            <EditText
                android:id="@+id/field_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="24dp"
                android:hint="@string/last_name"
                android:inputType="textPassword"
                android:textColor="@android:color/background_light" />

            <EditText
                android:id="@+id/field_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="24dp"
                android:hint="@string/phone_number"
                android:inputType="textPhonetic"
                android:textColor="@android:color/background_light" />

            <EditText
                android:id="@+id/field_business_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="24dp"
                android:hint="Business Unit"
                android:inputType="textPhonetic"
                android:textColor="@android:color/background_light" />

            <EditText
                android:id="@+id/field_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="24dp"
                android:hint="Role"
                android:inputType="textPhonetic"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/rounded_rectangle_orange"
                android:text="SAVE"
                android:textStyle="bold"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

        </LinearLayout>
    </ScrollView>


</FrameLayout>