<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:weightSum="4">

    <FrameLayout
        android:id="@+id/loading_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:elevation="2dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="60dp"
            android:rotation="90"
            android:tint="@color/hub_logo_color"
            app:srcCompat="@drawable/hub_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="100dp"
            android:gravity="center_vertical"
            android:text="ClickField"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="72sp"
            android:textStyle="bold" />
    </FrameLayout>

    <ImageView
        android:id="@+id/hub_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:rotation="90"
        android:tint="@color/hub_logo_color"
        app:srcCompat="@drawable/hub_icon" />

    <TextView
        android:id="@+id/boot_verification_email"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="165dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="We just sent you an email verification!"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:visibility="gone" />

    <TextView
        android:id="@+id/hub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="87dp"
        android:capitalize="characters"
        android:text="HUB"
        android:textColor="@android:color/background_light"
        android:textSize="64sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/email_password_fields"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="35dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/boot_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="Create Account"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <jjpartnership.hub.view_layer.custom_views.BackAwareEditText
            android:id="@+id/field_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/password_requirements_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:text="Password must include at least 8 characters, lowercase, uppercase and numbers."
            android:textColor="@android:color/darker_gray"
            android:textSize="10sp"
            android:visibility="gone" />

        <jjpartnership.hub.view_layer.custom_views.BackAwareEditText
            android:id="@+id/field_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/account_type_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="24dp"
            android:text="Account Type:"
            android:textColor="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/account_type_layout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/sales_agent_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rounded_rectangle_orange_left"
                android:gravity="center_vertical"
                android:text="Sales Agent"
                android:textAlignment="center"
                android:textColor="@android:color/background_light" />

            <TextView
                android:id="@+id/customer_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rounded_rectangle_grey_right"
                android:gravity="center_vertical"
                android:text="Customer"
                android:textAlignment="center"
                android:textColor="@color/grey_text" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/rounded_rectangle_orange"
                android:text="@string/sign_in"
                android:textStyle="bold"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                android:visibility="gone" />

            <Button
                android:id="@+id/email_create_account_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/rounded_rectangle_orange"
                android:text="@string/create_account"
                android:textStyle="bold"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <com.tuyenmonkey.mkloader.MKLoader
                android:id="@+id/loading_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="52dp"
                android:elevation="4dp"
                android:visibility="gone"
                app:mk_type="Worm" />

        </FrameLayout>

        <TextView
            android:id="@+id/show_login_view_tv"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="Already have an account?    Sign In"
            android:textAlignment="center"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/show_create_account_view_tv"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:visibility="gone" />

    </LinearLayout>


</FrameLayout>